Closed
Bug 1679957
Opened 5 years ago
Closed 5 years ago
Regression: VoiceOver no longer reads text in address bar
Categories
(Core :: Disability Access APIs, defect, P1)
Tracking
()
RESOLVED
FIXED
85 Branch
| Tracking | Status | |
|---|---|---|
| firefox-esr78 | --- | unaffected |
| firefox83 | --- | unaffected |
| firefox84 | --- | unaffected |
| firefox85 | --- | fixed |
People
(Reporter: MarcoZ, Assigned: eeejay)
References
(Regression)
Details
(Keywords: regression, Whiteboard: [Mac2020_2])
Attachments
(1 file)
This is a regression from bug 1672700. It rewrote a bunch of the MozTextAccessible stuff, which so far seems to have worked nicely in XUL text boxes, such as the one on the address bar. However, something got lost, so now text in the address bar is neither spoken nor brailled, not even after the fix for bug 1679075.
Steps:
- With VoiceOver on, open Nightly.
- Press Cmd+L to go to the address bar.
- Try to read the text that is in there, or enter some text or an URL, and try to read it with left and right arrow keys.
- Expected: VoiceOver reads the characters.
- Actual: Nothing is spoken.
- Turn on the Braille representation in the VoiceOver Utility, then return to Nightly and to the address bar.
- Enter some more text.
- Expected: Braille Viewer should show the text you enter.
- Actual: Text remains blank.
Major functionality breakage, P1 and S2, assigning directly to Eitan to take a look.
Comment 1•5 years ago
|
||
Set release status flags based on info from the regressing bug 1672700
status-firefox83:
--- → unaffected
status-firefox84:
--- → unaffected
status-firefox-esr78:
--- → unaffected
| Assignee | ||
Comment 2•5 years ago
|
||
UL documents have a bunch of non-hypetext accessibles in their heirarchy. So you can't assume
that a hyperlink's parent is a hypertext. To get around that, when we construct ranges for elements they should be internal ranges when possible.
Pushed by eisaacson@mozilla.com:
https://hg.mozilla.org/integration/autoland/rev/503d7bd90167
Text range from accessible should return inner offsets for hypertexts. r=morgan
Comment 4•5 years ago
|
||
| bugherder | ||
Status: ASSIGNED → RESOLVED
Closed: 5 years ago
Resolution: --- → FIXED
Target Milestone: --- → 85 Branch
Updated•5 years ago
|
Has Regression Range: --- → yes
You need to log in
before you can comment on or make changes to this bug.
Description
•