Bug 1679957 - Text range from accessible should return inner offsets for hypertexts. r=morgan

XUL documents have a bunch of non-hypetext accessibles in their heirarchy. So you can't assume that a hyperlink's parent is a hypertext. To get around that, when we construct ranges for elements they should be internal ranges when possible.

Differential Revision: https://phabricator.services.mozilla.com/D98394